# web_scraper

./: .gitignore  .pre-commit-config.yaml  README.md  license.txt  mypy.ini  pyproject.toml  setup.py
notebooks/: sandbox.ipynb
src/: main.py  schemas.py  scraper.py
src/db/: config.py  connection.py  database.py  models.py
src/models/: flat.py  recipe.py
src/queries/: base.py  recipe_table.py
src/scrapers/: __init__.py  base.py  min15.py  realu_lt.py
src/serializers/: recipe.py
webscraper/: webscraper.py
